[package]
name = "actix-web-async-await"
description = "Provides a preview of Actix with async/await support."
version = "0.1.0"
edition = "2018"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
repository = "https://github.com/mehcode/actix-web-async-await"
license = "MIT/Apache-2.0"
keywords = ["web", "actix", "async", "await"]
categories = ["asynchronous", "web-programming::http-server"]
readme = "README.md"

[dependencies]
actix-web = "0.7.13"
tokio-async-await = { version = "0.1.4", features = [ "async-await-preview" ] }

[dev-dependencies]
tokio = "0.1"
